--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     font-weight: bold;
-    background: (0, 0, 0);
+    background: linear-gradient(45deg, #49a09d, #5f2c82);
     height: calc(100% - 10px);
 }
 html{
