--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Noto Sans", sans-serif;
     
-    font-weight: 1600;
+    font-weight: bold;
     font-style: normal;
     font-variation-settings: "wdth" 100;
     background: linear-gradient(45deg, #f7931e, #1267ad, #f7931e);
